--- a/src/ReactDemo/Views/Home/Index.cshtml
+++ b/src/ReactDemo/Views/Home/Index.cshtml
@@ -11,6 +11,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
-    <script src="@Url.Content("~/js/tutorial.jsx")"></script>
+    <script src="@Url.Content("~/js/employee.jsx")"></script>
 </body>
 </html>
