--- a/src/ReactDemo/Views/Home/Index.cshtml
+++ b/src/ReactDemo/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<ReactDemo.Models.EmployeeModel>
+@{
     Layout = null;
 }
 <html>
@@ -7,10 +8,20 @@
     <title>Hello React</title>
 </head>
 <body>
-    <div id="content"></div>
+    <div id="content">
+        @Html.React("EmployeeBlock", new
+        {
+            initialData = Model,
+            url = Url.Action("Employees"),
+            submitUrl = Url.Action("AddEmployee"),
+            pollInterval = 2000,
+        })
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
     <script src="@Url.Content("~/js/employee.jsx")"></script>
+    @Html.ReactInitJavaScript()
 </body>
 </html>
